--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -130,11 +130,11 @@
       " 'PostCode': 'CT19 6BL',\n",
       " 'RatingDate': '2018-04-04T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('6599bbe4f206ed964b2cba11'),\n",
-      " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
+      " 'geocode': {'latitude': 51.083812, 'longitude': 1.195625},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
@@ -228,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "InsertOneResult(ObjectId('6599d3dfe8f6f2a2f223b95f'), acknowledged=True)"
+       "InsertOneResult(ObjectId('659a1ce40400c1e1a8a864d4'), acknowledged=True)"
       ]
      },
      "execution_count": 9,
@@ -266,10 +266,11 @@
       " 'NewRatingPending': True,\n",
       " 'Phone': '',\n",
       " 'PostCode': 'SE18 7DY',\n",
+      " 'RatingValue': None,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('6599c58152e2ddf6b94c024b'),\n",
-      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
     }
@@ -369,10 +370,11 @@
       " 'NewRatingPending': True,\n",
       " 'Phone': '',\n",
       " 'PostCode': 'SE18 7DY',\n",
+      " 'RatingValue': None,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('6599c58152e2ddf6b94c024b'),\n",
-      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
     }
@@ -393,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
@@ -407,14 +409,14 @@
    ],
    "source": [
     "# Find how many documents have LocalAuthorityName as \"Dover\"\n",
-    "query2 = {\"LocalAuthorityName\": \"Dover\"}\n",
-    "count = db.establishments.count_documents(query2)\n",
+    "query = {\"LocalAuthorityName\": \"Dover\"}\n",
+    "count = db.establishments.count_documents(query)\n",
     "print(count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "a11d5f1b",
    "metadata": {},
    "outputs": [
@@ -424,19 +426,19 @@
        "DeleteResult({'n': 0, 'ok': 1.0}, acknowledged=True)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Delete all documents where LocalAuthorityName is \"Dover\"\n",
-    "db.establishments.delete_many(query2)"
+    "db.establishments.delete_many(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "2a51aba0",
    "metadata": {},
    "outputs": [
@@ -450,8 +452,8 @@
    ],
    "source": [
     "# Check if any remaining documents include Dover\n",
-    "query3 = {\"LocalAuthorityName\": \"Dover\"}\n",
-    "count = db.establishments.count_documents(query3)\n",
+    "query = {\"LocalAuthorityName\": \"Dover\"}\n",
+    "count = db.establishments.count_documents(query)\n",
     "print(count)"
    ]
   },
@@ -485,11 +487,11 @@
       " 'PostCode': 'CT19 6BL',\n",
       " 'RatingDate': '2018-04-04T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('6599bbe4f206ed964b2cba11'),\n",
-      " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
+      " 'geocode': {'latitude': 51.083812, 'longitude': 1.195625},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
@@ -529,17 +531,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "fd4112ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "UpdateResult({'n': 38787, 'nModified': 38787, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+       "UpdateResult({'n': 38788, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,17 +567,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "04430a5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "UpdateResult({'n': 4091, 'nModified': 4091, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+       "UpdateResult({'n': 0, 'nModified': 0, 'ok': 1.0, 'updatedExisting': False}, acknowledged=True)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,17 +590,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "92524ccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "UpdateResult({'n': 38787, 'nModified': 2, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+       "UpdateResult({'n': 38788, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "id": "0deacaf9",
    "metadata": {},
    "outputs": [
